# autonomic-farm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  plot.ipynb
benchmark/: CMakeLists.txt  benchmark.hpp  ffbenchmarkutils.hpp  main_autonomicfarm.cpp  main_autonomicfeedbackfarm.cpp  main_farm.cpp  main_ff_autonomicfarm.cpp  main_ff_farm.cpp  main_sequential.cpp
common/include/utimer/: utimer.h
common/src/utimer/: utimer.cpp
csv/: arrival_time-1-4-500-0-1704721046406.csv  arrival_time-1-4-500-0-1704721132499.csv  arrival_time-1-4-500-0-1704721165697.csv  arrival_time-1-4-500-0-1704721190400.csv  arrival_time-1-4-500-0-1704721242760.csv  arrival_time-1-4-500-0-1704984325683.csv  arrival_time-1-4-500-8-1704554782946.csv  arrival_time-1-4-5000-8-1704464629471.csv  arrival_time-1-4-5000-8-1704475088382.csv  arrival_time-14-500.csv  arrival_time-16-500.csv  arrival_time-16-5000.csv  arrival_time-2-500.csv  arrival_time-4-500.csv  arrival_time-4-5000.csv  arrival_time-500-300.csv  arrival_time-64-500.csv  metadata-1-4-500-0-1704721190400.csv  metadata-1-4-500-0-1704984325683.csv  metadata-1-4-500-8-1704554782946.csv  metadata-1-4-5000-8-1704464629471.csv  metadata-1-4-5000-8-1704475088382.csv  num_workers-1-4-500-0-1704721046406.csv  num_workers-1-4-500-0-1704721132499.csv  num_workers-1-4-500-0-1704721165697.csv  num_workers-1-4-500-0-1704721190400.csv  num_workers-1-4-500-0-1704721242760.csv  num_workers-1-4-500-0-1704984325683.csv  num_workers-1-4-500-8-1704554782946.csv  num_workers-1-4-5000-8-1704464629471.csv  num_workers-1-4-5000-8-1704475088382.csv  num_workers-4-500.csv  service_time-1-4-500-0-1704721046406.csv  service_time-1-4-500-0-1704721132499.csv  service_time-1-4-500-0-1704721165697.csv  service_time-1-4-500-0-1704721190400.csv  service_time-1-4-500-0-1704721242760.csv  service_time-1-4-500-0-1704984325683.csv  service_time-1-4-500-8-1704554782946.csv  service_time-1-4-5000-8-1704464629471.csv  (+56 more)
csv/images-random-service-times/: command-run.txt
include/: AbstractFarm.hpp  AbstractNode.hpp  Autonomic.hpp  AutonomicFarm.hpp  AutonomicFeedbackFarm.hpp  AutonomicFeedbackGatherer.hpp  AutonomicFeedbackWorker.hpp  AutonomicGatherer.hpp  AutonomicWorker.hpp  AutonomicWorkerPool.hpp  BufferedNode.hpp  Emitter.hpp  Farm.hpp  FarmAnalytics.hpp  Gatherer.hpp  MonitoredFarm.hpp  MonitoringGatherer.hpp  Node.hpp  NodePool.hpp  ProgramArgs.hpp  Stream.hpp  ThreadedNode.hpp  Worker.hpp  WorkerPool.hpp  trace.hpp  utimer.hpp
include/fastflow/: FFAutonomicEmitter.hpp  FFAutonomicFarm.hpp  FFAutonomicGatherer.hpp  FFAutonomicWorker.hpp  FFMonitoringFarm.hpp  FFMonitoringGatherer.hpp  FFWorker.hpp
notebook/: plot.ipynb  requirements.txt
tests/: CMakeLists.txt  stream_test.cc
